Changing made on 17th Aug

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 						</div>
 						<div class="principal_image">
-							<img src="images/principal_image.jpg" alt="Principal's Message">
+							<img src="images/principal_image.JPG" alt="Principal's Message">
 						</div>
 						<div class="principal_name">
 							<h5>Mr. Shankar Thapa</h5>
