changing css to CSS

--- a/history.html
+++ b/history.html
@@ -4,8 +4,8 @@
 	<title>History Mt. Manaslu Secondary School</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/grid.css">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="CSS/grid.css">
+	<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/style_history.css">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
