--- a/gallery.html
+++ b/gallery.html
@@ -4,10 +4,10 @@
 	<title>Gallery Mt. Manaslu Secondary School</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/grid.css">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="CSS/grid.css">
+	<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/lightbox.min.css">
+	<link rel="stylesheet" href="CSS/lightbox.min.css">
 	<link rel="stylesheet" type="text/css" href="CSS/style_gallery.css">
 	<script src="js/lightbox-plus-jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
