Adding the links to the files

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,6 @@
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="CSS/lightbox.min.css">
 	<link rel="stylesheet" type="text/css" href="CSS/style_gallery.css">
-	<script src="js/lightbox-plus-jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
 
 </head>
@@ -26,7 +25,7 @@
 	    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center nav-buttons-a">
 	      <a href="index.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Home</a>
 	      <a href="admission.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Admission</a>
-	      <a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Hisotry</a>
+	      <a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">History</a>
 	      <a href="gallery.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Gallery</a>
 	      <a href="about_us.html" class="mr-5 hover:text-gray-900" id="nav-buttons">About Us</a>
 
@@ -66,6 +65,6 @@
 			<a href="images/gallery/image_20.JPG" data-lightbox="mygallery"><img src="images/gallery/image_20.JPG" alt="image_20"></a>
 		</div>
 	</section>
-
+	<script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
