--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center nav-buttons-a">
 			<a href="index.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Home</a>
 			<a href="admission.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Admission</a>
-			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Hisotry</a>
+			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">History</a>
 			<a href="gallery.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Gallery</a>
 			<a href="about_us.html" class="mr-5 hover:text-gray-900" id="nav-buttons">About Us</a>
 
@@ -57,7 +57,7 @@
 					<p>Mt. Manaslu is the hub of beautuful minds, where they get chance to grow together. How to get into Mt. Manaslu Secondary School?...</p>
 				</div>
 				<div class="learn_more_admission learn_more">
-					<a href="#">Learn More</a>
+					<a href="admission.html">Learn More</a>
 				</div>
 			</div>
 			<div class="goals_mission col span-1-of-3">
@@ -71,7 +71,7 @@
 					<p>To impart better and practical education in a friendly environment that enable students to cope with the challenges of changing world...</p>
 				</div>
 				<div class="learn_more_goals learn_more">
-					<a href="#">Learn More</a>
+					<a href="about_us.html">Learn More</a>
 				</div>
 			</div>
 			<div class="history col span-1-of-3">
@@ -85,7 +85,7 @@
 					<p>As the pioneer of English-medium schools in Duhabi, <strong>Mt. Manaslu</strong> has been successful in creating the examples of standard education...</p>
 				</div>
 				<div class="learn_more_history learn_more">
-					<a href="#">Learn More</a>
+					<a href="history.html">Learn More</a>
 				</div>
 			</div>
 		</div>
@@ -147,7 +147,7 @@
 		      		<strong>Education is the passport to the future. Tomorrow belongs to those people who prepare for it today. Mount Manaslu School keeps the aforesaid social virtues. Eptomized within its name and it inculcates these virtues in to the minds and hearts of our young students.</strong>
 		      </p>
 		      <div class="flex justify-center">
-		        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Our History</button>
+		        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="window.location.href='history.html';">Our History</button>
 		      </div>
 		    </div>
 	  </div>
