--- a/our_features.html
+++ b/our_features.html
@@ -24,7 +24,7 @@
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center nav-buttons-a">
               <a href="index.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Home</a>
               <a href="admission.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Admission</a>
-              <a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Hisotry</a>
+              <a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">History</a>
               <a href="gallery.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Gallery</a>
               <a href="about_us.html" class="mr-5 hover:text-gray-900" id="nav-buttons">About Us</a>
   
@@ -78,7 +78,7 @@
                 <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
             </div>
           </div>
-          <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">History</button>
+          <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="window.location.href='history.html';">History</button>
         </div>
       </section>
       <!--------------------------------------------------- testinomials ------------------------------------------------->
