--- a/about_us.html
+++ b/about_us.html
@@ -24,7 +24,7 @@
 	    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center nav-buttons-a">
 			<a href="index.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Home</a>
 			<a href="admission.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Admission</a>
-			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Hisotry</a>
+			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">History</a>
 			<a href="gallery.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Gallery</a>
 			<a href="about_us.html" class="mr-5 hover:text-gray-900" id="nav-buttons">About Us</a>
 
