--- a/admission.html
+++ b/admission.html
@@ -4,8 +4,8 @@
 	<title>Admission Mt. Manaslu Secondary School</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/grid.css">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="CSS/grid.css">
+	<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/style_admission.css">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
 	    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center nav-buttons-a">
 			<a href="index.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Home</a>
 			<a href="admission.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Admission</a>
-			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Hisotry</a>
+			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">History</a>
 			<a href="gallery.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Gallery</a>
 			<a href="about_us.html" class="mr-5 hover:text-gray-900" id="nav-buttons">About Us</a>
 
