--- a/history.html
+++ b/history.html
@@ -24,7 +24,7 @@
 	    <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center nav-buttons-a">
 			<a href="index.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Home</a>
 			<a href="admission.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Admission</a>
-			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Hisotry</a>
+			<a href="history.html" class="mr-5 hover:text-gray-900" id="nav-buttons">History</a>
 			<a href="gallery.html" class="mr-5 hover:text-gray-900" id="nav-buttons">Gallery</a>
 			<a href="about_us.html" class="mr-5 hover:text-gray-900" id="nav-buttons">About Us</a>
 
@@ -56,7 +56,7 @@
 		      		<strong>Established in the year 1986 A.D, Mt. Manaslu has celebrated 34 excellent academic years. The school started with about .... students and  now Mt. Manaslu Secondary School is shaping the mind of more than 1200 students. The academic results of this school has always been appreciable. Now the former students of Mt. Manaslu are serving in different parts of country.</strong>
 		      </p>
 		      <div class="flex justify-center">
-		        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Home</button>
+		        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="window.location.href='index.html';">Home</button>
 		      </div>
 		    </div>
 	  </div>
