Adding files on 24th October

--- a/admission.html
+++ b/admission.html
@@ -41,16 +41,20 @@
 	<section>
 		<section class="text-gray-700 body-font">
 		  <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-		    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+		    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="images/admission_image.jpg">
 		    <div class="text-center lg:w-2/3 w-full">
 		      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" id="quote" style="font-family: 'Courgette', cursive;">"Learning is a treasure that follows it's owner everywhere."</h1>
-		      <p class="mb-8 leading-relaxed">Meggings kinfolk echo park stumptown DIY, kale chips beard jianbing tousled. Chambray dreamcatcher trust fund, kitsch vice godard disrupt ramps hexagon mustache umami snackwave tilde chillwave ugh. Pour-over meditation PBR&B pickled ennui celiac mlkshk freegan photo booth af fingerstache pitchfork.</p>
+		      <p class="mb-8 leading-relaxed">
+				Looking forward for a place for your children to grow and learn??? <br>
+				Mt. Manaslu has a been a great learning environemnt and hub of beautiful minds for more than 35 years.
+				We assure you better future of your child. <br> Follow the procedure below for admission process.</p>
 		    </div>
 		  </div>
 		</section>
 	</section>
 	<!---------------------------------------------------     <form>    -------------------------------------------------------->
 	<section class="form_section">
+		<a name="admission_form_admission"></a>
 		<form class="row">
 			<div class="form_heading">
 				<h2>Admissison Form</h2> <hr>
