--- a/history.html
+++ b/history.html
@@ -40,7 +40,7 @@
 	<section class="text-gray-700 body-font first_part">
 	  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 		    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-		      <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+		      <img class="object-cover object-center rounded" alt="hero" src="images/history_image.JPG">
 		    </div>
 		    <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
 		      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"  id="why-mt-manaslu-heading">Glorious History of Mt. Manaslu Secondary School
@@ -49,7 +49,7 @@
 		      		A school is a place where people go to learn about topics such as reading, writing
 		      		and mathematics. In a school or university, one or more teachers help students to learn.
 		      		Mt. Manaslu has always been a great place for students and teachers to share their knowledge
-		      		grow their mind.
+		      		and grow their mind.
 		      		
 		      </p>
 		      <p class="mb-8 leading-relaxed" id="why-mt-manaslu">
@@ -62,11 +62,12 @@
 	  </div>
 	</section>
 	<!---------------------------------------------------     History Second Part    -------------------------------------------------------->
+	<a name="achievement_history"></a>
 	<section class="text-gray-700 body-font second_part">
 		  <div class="container px-5 py-24 mx-auto">
 		    <div class="flex flex-col text-center w-full mb-20">
 		      <h1 class="text-2xl font-medium title-font mb-4 text-gray-900 tracking-widest">REFLECTIONS FROM PAST</h1>
-		      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Mt. Manaslu Secondary School has created a wonderful experiences in past. Here are some of the recaptures and flashback.</p>
+		      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Mt. Manaslu Secondary School has created a wonderful experiences in past. Here are some of the recent recaptures and flashback.</p>
 		    </div>
 		    <div class="second_part_images">
 		    <div class="flex flex-wrap -m-4">
@@ -237,10 +238,11 @@
 		  </div>
 </section>
 	<!---------------------------------------------------     History Batch Part    -------------------------------------------------------->
+	<a name="previous_batch"></a>
 	<section class="batch_part">
 		<div class="batch_images">
 			<div class="batch_2076">
-				<img src="images/batch_images/batch_2076.jpg">
+				<img src="images/batch_images/batch_2076.jpeg">
 				<h4>Batch 2076</h4>
 			</div>
 		</div>
@@ -318,16 +320,16 @@
 			<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CATEGORIES</h2>
 			<nav class="list-none mb-10">
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">First Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="index.html">Home</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Second Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="admission.html#admission_form_admission">Admission</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Third Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="history.html">History</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Fourth Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="about_us.html">About Us</a>
 			  </li>
 			</nav>
 		  </div>
@@ -335,34 +337,34 @@
 			<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CATEGORIES</h2>
 			<nav class="list-none mb-10">
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">First Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="our_features.html">Our Features</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Second Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="history.html#previous_batch">Previous Batch</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Third Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="about_us.html#parents_testimonials">Parent's Testimonaial</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Fourth Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="our_features.html#alumni">Alumni</a>
 			  </li>
 			</nav>
 		  </div>
 		  <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-			<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CATEGORIES</h2>
+			<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CONTACT</h2>
 			<nav class="list-none mb-10">
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">First Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color">025-540322</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Second Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color" href="https://www.facebook.com/Mount-Manaslu-Secondary-School-1869925856597447/">Facebook</a>
 			  </li>
 			  <li>
-				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Third Link</a>
+				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Instagram</a>
 			  </li>
-			  <li>
+			  <!-- <li>
 				<a class="text-gray-600 hover:text-gray-800" id="footer-color">Fourth Link</a>
-			  </li>
+			  </li> -->
 			</nav>
 		  </div>
 		</div>
