--- a/index.html
+++ b/index.html
@@ -100,24 +100,26 @@
 							<h3>Principal's Message</h3>
 						</div>
 						<div class="message_paragraph">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem 
-							ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>Dear Students and Parents, <br><br> Schooling is our first contact with the world, a period of joy, 		healthy competition, fearing adjustment, sharing and love.
+								It is not the wide open spaces, classrooms, the library, laboratories or the large fields that make the school. It is in the heart of the students
+								and staffs that the true institution exists. 
+								<br><br>
+								As a printicpal I am hugely impressed by the commitment of the school and the staff to the provision of an excellent all-round education 
+								for our students in our state of the art facilities. Under my leadership, and as a team working together, we strongly promote academic achievement
+								among our students.
+								<br> <br>
+								With a long and rewarding history of achievement in education behind us, our school community continues to move forward together with confidence,
+								pride and enthusiasm.
+								<br> <br>
+								With your support, we can build on our past successes to take Mission School to the next level. Please don’t hesitate to contact me, I value your input. 
+								</p>
 						</div>
 						<div class="principal_image">
 							<img src="images/principal_image.JPG" alt="Principal's Message">
 						</div>
 						<div class="principal_name">
-							<h5>Mr. Shankar Thapa</h5>
+							<h4>Yours in Education,</h4>
+							<h5>Shankar Thapa</h5>
 						</div>
 					</div>
 				</div>
@@ -129,7 +131,7 @@
 	<section class="text-gray-700 body-font">
 	  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 		    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-		      <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+		      <img class="object-cover object-center rounded" alt="hero" src="images/index_image.jpg">
 		    </div>
 		    <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
 		      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900"  id="why-mt-manaslu-heading">Why Mt. Manaslu Sec. School?
@@ -171,16 +173,16 @@
         <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CATEGORIES</h2>
         <nav class="list-none mb-10">
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">First Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="index.html">Home</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Second Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="admission.html#admission_form_admission">Admission</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Third Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="history.html">History</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Fourth Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="about_us.html">About Us</a>
           </li>
         </nav>
       </div>
@@ -188,34 +190,34 @@
         <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CATEGORIES</h2>
         <nav class="list-none mb-10">
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">First Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="our_features.html">Our Features</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Second Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="history.html#previous_batch">Previous Batch</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Third Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="about_us.html#parents_testimonials">Parent's Testimonaial</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Fourth Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="our_features.html#alumni">Alumni</a>
           </li>
         </nav>
       </div>
       <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CATEGORIES</h2>
+        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3" id="footer-color">CONTACT</h2>
         <nav class="list-none mb-10">
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">First Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color">025-540322</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Second Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color" href="https://www.facebook.com/Mount-Manaslu-Secondary-School-1869925856597447/">Facebook</a>
           </li>
           <li>
-            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Third Link</a>
+            <a class="text-gray-600 hover:text-gray-800" id="footer-color">Instagram</a>
           </li>
-          <li>
+          <!-- <li>
             <a class="text-gray-600 hover:text-gray-800" id="footer-color">Fourth Link</a>
-          </li>
+          </li> -->
         </nav>
       </div>
     </div>
