--- a/our_features.html
+++ b/our_features.html
@@ -42,46 +42,48 @@
           <div class="flex flex-col text-center w-full mb-20">
             <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">Learn For Advancement</h2>
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">OUR FEATURES</h1>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Great schools have many distinguishing features in common.This post is not intended to be an exhaustive report on all the characteristics of great schools.  It lists, however, some features that most educational experts and practitioners consider to be necessary in the 
+            anatomy of any great school.</p>
           </div>
           <div class="flex flex-wrap">
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
               <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Karate</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <p class="leading-relaxed text-base mb-4">We teach our students Shi-To-Ryu Karate which is affiliated by Government Of Nepal. Our student have also won various medals and tournaments.</p>
              </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
               <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Computer Lab</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <p class="leading-relaxed text-base mb-4">We have well faciliated computer lab where students are able to connect to the modern technology and grow their potential.</p>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
               <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Library</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <p class="leading-relaxed text-base mb-4">"Nothing is pleasanter than exploring a library." Our Library has variety of books to enhance and support the learning of the students and teachers.</p>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
               <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Music and Dance</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <p class="leading-relaxed text-base mb-4">Students in our school can also learn Dancing and Music. We believe in overall development of the students.</p>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
                 <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Variety of Subjects</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <p class="leading-relaxed text-base mb-4">Our Students can choose variety of optional subjects in class 9 and 10 according to their wish and potential. We have qualified teacher for all subjects.</p>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
                 <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Other Sports</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <p class="leading-relaxed text-base mb-4">Except for the karate students in our school can learn different sports like volleyball, tennis, javelin throw, athlatics. We have sports teacher to guide our students.</p>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
                 <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Prominent Academic Session</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <p class="leading-relaxed text-base mb-4">Apart from the regular classes we also give extra classes to the students who are weak in particular subject. One to one interaction is done with such students.</p>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
                 <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Qualified Teachers</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <p class="leading-relaxed text-base mb-4">Our well educated and qualified teachers always take care that our students receive better education and get full opportunity to develop themselves.</p>
             </div>
           </div>
           <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="window.location.href='history.html';">History</button>
         </div>
       </section>
       <!--------------------------------------------------- testinomials ------------------------------------------------->
+      <a name="alumni"></a>
       <section class="text-gray-700 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap -m-4">
