--- a/about_us.html
+++ b/about_us.html
@@ -45,41 +45,39 @@
 				</div>
 				<div class="image_part_paragraph">
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi modi sint, 
-						sunt fuga tenetur eius. Nostrum voluptates, cumque, soluta et beatae adipisci 
-						magnam quis aliquid doloribus, ipsam vitae aliquam vel. Lorem ipsum dolor sit 
-						amet consectetur adipisicing elit. Quam numquam quaerat dolorum, delectus, sequi 
-						optio, inventore deserunt veniam deleniti ipsam perferendis soluta. Culpa expedita 
-						voluptates officiis animi sunt sed nam?Lorem ipsum dolor sit amet consectetur adipisicing 
-						elit. Eligendi modi sint, sunt fuga tenetur eius. Nostrum voluptates, cumque, soluta et beatae adipisci 
-						magnam quis aliquid doloribus, ipsam vitae aliquam vel. Lorem ipsum dolor sit 
-						amet consectetur adipisicing elit. Quam numquam quaerat dolorum, delectus, sequi 
-						optio, inventore deserunt veniam deleniti ipsam perferendis soluta. Culpa expedita 
-						voluptates officiis animi sunt sed nam?
+						The mission and vision of Mt. Manaslu Secondary School is to teach leadership, the common core,
+						and relationships for life. We provide our students with safe and disciplined learning environment
+						that empowers all students to develop their full potential. We feel strongly about helping to build 
+						leaders that have the ability to succeed in whatever endeavor they undertake. Winning is not always 
+						the measure of success. <br>
+						We care about each student and are dedicated to providing an education that allows all of our students
+						to succeed. Our highly qualified teachers work with students in a small class setting that allows
+						them to personalize their teaching strategies. We also offer a full range of support services and
+						program offerings that enhance student learning. 
 					</p>
 				</div>
 				<div class="image_part_image">
-					<img src="images/about_us_image.JPG" alt="About Us Image">
+					<img src="images/about_us_image.jpeg" alt="About Us Image">
 				</div>
 			</div>
 			<div class="col span-1-of-4 list_part">
 				<ul>
-					<li><a href="#">First Choice</a></li>
-					<li><a href="#">Second Choice</a></li>
-					<li><a href="#">Third Choice</a></li>
-					<li><a href="#">Fourth Choice</a></li>
-					<li><a href="#">Fifth Choice</a></li>
-					<li><a href="#">Sixth Choice</a></li>
-					<li><a href="#">Seventh Choice</a></li>
-					<li><a href="#">Eighth Choice</a></li>
-					<li><a href="#">Ninth Choice</a></li>
-					<li><a href="#">Tenth Choice</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="admission.html">Admission</a></li>
+					<li><a href="history.html">History</a></li>
+					<li><a href="about_us.html">About Us</a></li>
+					<li><a href="our_features.html">Our Features</a></li>
+					<li><a href="history.html#achievement_history">Achievements</a></li>
+					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="#">025-540322</a></li>
+					<li><a href="https://www.facebook.com/Mount-Manaslu-Secondary-School-1869925856597447/">Facebook</a></li>
 					
 				</ul>
 			</div>
 		</div>
 	</section>
 	<!------------------------------------------------------ testimonial -------------------------------------------------------->
+	<a name="parents_testimonials"></a>
 	<section class="text-gray-700 body-font footer_testimonial">
 		<div class="container px-5 py-24 mx-auto">
 		  <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
@@ -91,18 +89,15 @@
 			   22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 
 			   67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
 			</svg>
-			<p class="leading-relaxed text-lg">Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk. 
-				Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware. Man bun next 
-				level coloring book skateboard four loko knausgaard. Kitsch keffiyeh master cleanse direct trade indigo juice before they sold out 
-				gentrify plaid gastropub normcore XOXO 90's pickled cindigo jean shorts. Slow-carb next level shoindigoitch ethical authentic, yr 
-				scenester sriracha forage franzen organic drinking vinegar.</p>
+			<p class="leading-relaxed text-lg">My educated my all three child in this school. The atmosphere and learning 		environment is optimal for all young children. All of the students receive individual attention. They’ve done 	  their research and understand that children learn best by questioning, creating, and applying knowledge.
+				Not only study but extra curricular activities are also done with great enthusiasm here.</p>
 			<span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
-			<h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Name of The parent</h2>
-			<p class="text-gray-500">Student Batch or other thing</p>
+			<h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Mr. Dhananjay Singh</h2>
+			<p class="text-gray-500">Student-Batch: 2073</p>
 		  </div>
 		</div>
 	  </section>
-	  <!-------------------------------------------------------    Footer	   ----------------------------------------------->
+	  <!-- -----------------------------------------------------    Footer	   ---------------------------------------------
 	<section class="footer-whole">
 		<footer class="text-gray-700 body-font">
 	  <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
@@ -170,7 +165,7 @@
 		  </div>
 		</div>
 	  </div>
-	  </section>
+	  </section> -->
 		<!-------------------------------------------------------    Footer-copyright	   ----------------------------------------------->
 		<section class="footer-lower-part">
 	  <div class="bg-gray-200 footer-lower-part">
