Adding files on 1st December

--- a/about_us.html
+++ b/about_us.html
@@ -89,7 +89,9 @@
 			   22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 
 			   67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
 			</svg>
-			<p class="leading-relaxed text-lg">My educated my all three child in this school. The atmosphere and learning 		environment is optimal for all young children. All of the students receive individual attention. They’ve done 	  their research and understand that children learn best by questioning, creating, and applying knowledge.
+			<p class="leading-relaxed text-lg">I educated my all three child in this school. The atmosphere and learning 
+				environment is optimal for all young children. All of the students receive individual attention. They’ve done
+				 their research and understand that children learn best by questioning, creating, and applying knowledge.
 				Not only study but extra curricular activities are also done with great enthusiasm here.</p>
 			<span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-8 mb-6"></span>
 			<h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Mr. Dhananjay Singh</h2>
