--- a/gallery.html
+++ b/gallery.html
@@ -57,12 +57,12 @@
 			<a href="images/gallery/image_12.jpg" data-lightbox="mygallery"><img src="images/gallery/image_12.jpg" alt="image_12"></a>
 			<a href="images/gallery/image_13.JPG" data-lightbox="mygallery"><img src="images/gallery/image_13.JPG" alt="image_13"></a>
 			<a href="images/gallery/image_14.JPG" data-lightbox="mygallery"><img src="images/gallery/image_14.JPG" alt="image_14"></a>
-			<a href="images/gallery/image_15.JPG" data-lightbox="mygallery"><img src="images/gallery/image_15.JPG" alt="image_15"></a>
+			<!-- <a href="images/gallery/image_15.JPG" data-lightbox="mygallery"><img src="images/gallery/image_15.JPG" alt="image_15"></a>
 			<a href="images/gallery/image_16.jpg" data-lightbox="mygallery"><img src="images/gallery/image_16.jpg" alt="image_16"></a>
 			<a href="images/gallery/image_17.jpg" data-lightbox="mygallery"><img src="images/gallery/image_17.jpg" alt="image_17"></a>
 			<a href="images/gallery/image_18.JPG" data-lightbox="mygallery"><img src="images/gallery/image_18.JPG" alt="image_18"></a>
 			<a href="images/gallery/image_19.JPG" data-lightbox="mygallery"><img src="images/gallery/image_19.JPG" alt="image_19"></a>
-			<a href="images/gallery/image_20.JPG" data-lightbox="mygallery"><img src="images/gallery/image_20.JPG" alt="image_20"></a>
+			<a href="images/gallery/image_20.JPG" data-lightbox="mygallery"><img src="images/gallery/image_20.JPG" alt="image_20"></a> -->
 		</div>
 	</section>
 	<script src="js/lightbox-plus-jquery.min.js"></script>
