--- a/history.html
+++ b/history.html
@@ -53,7 +53,9 @@
 		      		
 		      </p>
 		      <p class="mb-8 leading-relaxed" id="why-mt-manaslu">
-		      		<strong>Established in the year 1986 A.D, Mt. Manaslu has celebrated 34 excellent academic years. The school started with about .... students and  now Mt. Manaslu Secondary School is shaping the mind of more than 1200 students. The academic results of this school has always been appreciable. Now the former students of Mt. Manaslu are serving in different parts of country.</strong>
+		      		<strong>Established in the year 1986 A.D, Mt. Manaslu has celebrated 34 excellent academic years. The school started with very few 
+						  students and  now Mt. Manaslu Secondary School is shaping the mind of more than 1200 students. The academic results of this 
+						  school has always been appreciable. Now the former students of Mt. Manaslu are serving in different parts of country.</strong>
 		      </p>
 		      <div class="flex justify-center">
 		        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" onclick="window.location.href='index.html';">Home</button>
@@ -61,7 +63,7 @@
 		    </div>
 	  </div>
 	</section>
-	<!---------------------------------------------------     History Second Part    -------------------------------------------------------->
+	<!-- -------------------------------------------------     History Second Part    ------------------------------------------------------
 	<a name="achievement_history"></a>
 	<section class="text-gray-700 body-font second_part">
 		  <div class="container px-5 py-24 mx-auto">
@@ -236,13 +238,13 @@
 		    </div>
 		    </div>
 		  </div>
-</section>
+</section> -->
 	<!---------------------------------------------------     History Batch Part    -------------------------------------------------------->
 	<a name="previous_batch"></a>
 	<section class="batch_part">
 		<div class="batch_images">
 			<div class="batch_2076">
-				<img src="images/batch_images/batch_2076.jpeg">
+				<img src="images/batch_images/batch_2076.jp	g">
 				<h4>Batch 2076</h4>
 			</div>
 		</div>
@@ -296,7 +298,7 @@
 		</div>
 		<div class="batch_images">
 			<div class="batch_2076">
-				<img src="images/batch_images/batch_2067.jpg">
+				<img src="images/batch_images/batch_2067.png">
 				<h4>Batch 2067</h4>
 			</div>
 		</div>
