--- a/our_features.html
+++ b/our_features.html
@@ -89,29 +89,38 @@
           <div class="flex flex-wrap -m-4">
             <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
               <div class="h-full text-center">
-                <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="https://dummyimage.com/302x302">
-                <p class="leading-relaxed">Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk. Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="images/sujit_shah.jpg">
+                <p class="leading-relaxed">My experience with Mt. Manaslu is great. Firstly the faculty support is excellent.
+                   Secondly they  don't only educate students, but also teach how to live a better and happy life. The environment
+                    is perfect for students who want a better place to grow their mind. 
+                </p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
-                <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Thulo Manxe ko naam</h2>
-                <p class="text-gray-500">Thulo manxe ko company</p>
+                <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Er. Sujit Shah</h2>
+                <p class="text-gray-500">Electrical Engineer(BE), MBA, USA</p>
               </div>
             </div>
             <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
               <div class="h-full text-center">
-                <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="https://dummyimage.com/300x300">
-                <p class="leading-relaxed">Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk. Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="images/sambhu_shah.jpg">
+                <p class="leading-relaxed">Mt. Manaslu Secondary School can give opportunities to students to develop themselves. 
+                  The teachers are very friendly and they make sure that there is every faclity available to student so that they 
+                  can learn properly. The extra curricular activies help in overall development of student. 
+                </p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
-                <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Thulo Manxe ko naam</h2>
-                <p class="text-gray-500">Thulo manxe ko company</p>
+                <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Er. Shambhu Shah</h2>
+                <p class="text-gray-500">Chemical Engineer(ME), USA</p>
               </div>
             </div>
             <div class="lg:w-1/3 lg:mb-0 p-4">
               <div class="h-full text-center">
-                <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="https://dummyimage.com/305x305">
-                <p class="leading-relaxed">Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk. Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="images/priyanka_thandar.jpg">
+                <p class="leading-relaxed">I had a great time at Mt. Manaslu. Thanks to their friendly teachers and helpful staff, 
+                  I could find the best place for education. In these years I had the chance to fully prepare myself 
+                  This was a wonderful experience that helped me become more confident in myself.
+                </p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
-                <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Thulo Manxe ko naam</h2>
-                <p class="text-gray-500">Thulo manxe ko company</p>
+                <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Priyanka Thandar</h2>
+                <p class="text-gray-500">Pharmacist (B. Pharmacy)</p>
               </div>
             </div>
           </div>
