Adding discriptions and keywords

--- a/our_features.html
+++ b/our_features.html
@@ -9,7 +9,9 @@
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/style_our_features.css">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+  <meta name="description" content="Mt. Manaslu Secondary School Duhabi-04, Sunsari, Features">
+	<meta name="keywords" content="Mt. Manaslu, Mt. Manaslu School, Mt. Manalsu Secondary School, Manaslu School, Mt. School, Duhabi School, School, Duhabi, Sunsary, Duhabi Sunsari, Nepal, Nepal Best School">
 </head>
 <body>
     <!---------------------------------------------------     Header    -------------------------------------------------------->
@@ -96,7 +98,7 @@
                 </p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
                 <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Er. Sujit Shah</h2>
-                <p class="text-gray-500">Electrical Engineer(BE), MBA, USA</p>
+                <p class="text-gray-500">Electrical Engineer(ME), USA</p>
               </div>
             </div>
             <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
@@ -108,7 +110,7 @@
                 </p>
                 <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
                 <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Er. Shambhu Shah</h2>
-                <p class="text-gray-500">Chemical Engineer(ME), USA</p>
+                <p class="text-gray-500">Chemical Engineer(BE, MBA), USA</p>
               </div>
             </div>
             <div class="lg:w-1/3 lg:mb-0 p-4">
