--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/style_index.css">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+	<meta name="description" content="Mt. Manaslu Secondary School Duhabi-04, Sunsari">
+	<meta name="keywords" content="Mt. Manaslu, Mt. Manaslu School, Mt. Manalsu Secondary School, Manaslu School, Mt. School, Duhabi School, School, Duhabi, Sunsary, Duhabi Sunsari, Nepal, Nepal Best School">
 
 </head>
 <body>
