Adding moung keyword to the sete

--- a/our_features.html
+++ b/our_features.html
@@ -11,7 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
   <meta name="description" content="Mt. Manaslu Secondary School Duhabi-04, Sunsari, Features">
-	<meta name="keywords" content="Mt. Manaslu, Mt. Manaslu School, Mt. Manalsu Secondary School, Manaslu School, Mt. School, Duhabi School, School, Duhabi, Sunsary, Duhabi Sunsari, Nepal, Nepal Best School">
+  <meta name="keywords" content="Mt Manaslu, Mount Manaslu School, Mount Manaslu Secondary School, Mount School, Mount Duhabi, Mount,  Mt Manaslu School, Mt Manalsu Secondary School, Manaslu School, Mt School, Duhabi School, School, Duhabi, Sunsary, Duhabi Sunsari, Nepal, Nepal Best School">
+
 </head>
 <body>
     <!---------------------------------------------------     Header    -------------------------------------------------------->
