--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="CSS/style_about_us.css">
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
 	<meta name="description" content="Mt. Manaslu Secondary School Duhabi-04, Sunsari About Us">
-	<meta name="keywords" content="Mt. Manaslu, Mt. Manaslu School, Mt. Manalsu Secondary School, Manaslu School, Mt. School, Duhabi School, School, Duhabi, Sunsary, Duhabi Sunsari, Nepal, Nepal Best School">
+	<meta name="keywords" content="Mt Manaslu, Mount Manaslu School, Mount Manaslu Secondary School, Mount School, Mount Duhabi, Mount,  Mt Manaslu School, Mt Manalsu Secondary School, Manaslu School, Mt School, Duhabi School, School, Duhabi, Sunsary, Duhabi Sunsari, Nepal, Nepal Best School">
 
 </head>
 <body>
@@ -174,7 +174,7 @@
 		<section class="footer-lower-part">
 	  <div class="bg-gray-200 footer-lower-part">
 		<div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-		  <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 Mt. Manaslu Secondary School -
+		  <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 Mt. Manaslu Secondary School - Website Designed by: Aadarsh Singh -- 9816306875
 			<!-- <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@knyttneve</a> -->
 		  </p>
 		  <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
