--- a/history.html
+++ b/history.html
@@ -264,13 +264,13 @@
 		</div>
 		<div class="batch_images">
 			<div class="batch_2073">
-				<img src="images/batch_images/batch_2073.jpg">
+				<img src="images/batch_images/batch_2073.JPG">
 				<h4>Batch 2073</h4>
 			</div>
 		</div>
 		<div class="batch_images">
 			<div class="batch_2072">
-				<img src="images/batch_images/batch_2072.jpg">
+				<img src="images/batch_images/batch_2072.JPG">
 				<h4>Batch 2072</h4>
 			</div>
 		</div>
